Wire strict V4 material readiness